--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "passport-spotify-examples-login",
+  "name": "1q",
   "version": "0.0.1",
   "dependencies": {
     "body-parser": "1.3.1",
