--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "1q",
   "version": "0.0.1",
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
     "body-parser": "1.3.1",
     "cheerio": "^0.20.0",
