--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cheerio": "^0.20.0",
     "consolidate": "^0.10.0",
     "cookie-parser": "^1.3.1",
+    "ejs": "^2.4.1",
     "express": "^4.4.3",
     "express-session": "^1.4.0",
     "http": "0.0.0",
@@ -30,5 +31,10 @@
     "socket.io": "^1.0.6",
     "spotify-web-api-node": "^2.3.5",
     "swig": "^1.3.2"
-  }
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ]
 }
