--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "1Q",
   "description": "Shared Queue",
-  "repository": "https://github.com/heroku/node-js-getting-started",
+  "repository": "https://github.com/nsuarez2/1q",
   "logo": "http://node-js-sample.herokuapp.com/node.svg",
   "keywords": ["node", "express", "static"],
   "image": "heroku/onequeue"
