--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "license": "Apache Version 2.0",
   "engines": {
-    "node": "~4.2"
+    "node": "4.4.7"
   },
   "scripts": {
     "start": "node app.js",
