--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "license": "Apache Version 2.0",
   "engines": {
-    "node": "4.4.7"
+    "node": "4.4.7",
+    "npm": "2.15.8"
   },
   "scripts": {
     "start": "node app.js",
