--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "passport": "^0.2.2",
     "passport-oauth": "^1.0.0",
     "pkginfo": "^0.4.0",
+    "pycollections": "^0.9.0",
     "querystring": "^0.2.0",
     "socket.io": "^1.0.6",
     "spotify-web-api-node": "^2.3.5",
