--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "1Q",
   "description": "Shared Queue",
   "repository": "https://github.com/nsuarez2/1q",
-  "logo": "http://node-js-sample.herokuapp.com/node.svg",
+  "logo": "/static/logo.png",
   "keywords": ["node", "express", "static"],
   "image": "heroku/onequeue"
 }
