--- a/package.json
+++ b/package.json
@@ -14,22 +14,13 @@
   },
   "dependencies": {
     "body-parser": "^1.3.1",
-    "cheerio": "^0.20.0",
     "consolidate": "^0.14.1",
     "cookie-parser": "^1.3.1",
     "ejs": "^2.4.1",
     "express": "^4.4.3",
-    "express-session": "^1.4.0",
-    "http": "0.0.0",
+    "http": "^0.0.0",
     "jquery": "^3.1.0",
-    "method-override": "^2.0.2",
-    "net": "^1.0.2",
-    "network": "^0.2.1",
-    "passport": "^0.2.2",
-    "passport-oauth": "^1.0.0",
-    "pkginfo": "^0.4.0",
     "pycollections": "^0.9.0",
-    "querystring": "^0.2.0",
     "serve-favicon": "^2.3.2",
     "socket.io": "^1.0.6",
     "spotify-web-api-node": "^2.3.5",
